Cambios en llamados y parámetros